--- a/about.html
+++ b/about.html
@@ -363,7 +363,7 @@
                         <div class="team-block-one wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="assets/images/team/team-1.jpg" alt="">
+                                    <img src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=2000" alt="">
                                     <ul class="social-links">
                                         <li><a href="about.html"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="about.html"><i class="fab fa-twitter"></i></a></li>
@@ -382,7 +382,7 @@
                         <div class="team-block-one wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="assets/images/team/team-2.jpg" alt="">
+                                    <img src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=2000" alt="">
                                     <ul class="social-links">
                                         <li><a href="about.html"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="about.html"><i class="fab fa-twitter"></i></a></li>
@@ -401,7 +401,7 @@
                         <div class="team-block-one wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1500ms">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="assets/images/team/team-3.jpg" alt="">
+                                    <img src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=2000" alt="">
                                     <ul class="social-links">
                                         <li><a href="about.html"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="about.html"><i class="fab fa-twitter"></i></a></li>
@@ -424,7 +424,7 @@
                         <div class="team-block-one wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="assets/images/team/team-1.jpg" alt="">
+                                    <img src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=2000" alt="">
                                     <ul class="social-links">
                                         <li><a href="about.html"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="about.html"><i class="fab fa-twitter"></i></a></li>
@@ -443,7 +443,7 @@
                         <div class="team-block-one wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="assets/images/team/team-2.jpg" alt="">
+                                    <img src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=2000" alt="">
                                     <ul class="social-links">
                                         <li><a href="about.html"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="about.html"><i class="fab fa-twitter"></i></a></li>
