--- a/service.html
+++ b/service.html
@@ -387,10 +387,10 @@
     <section class="testimonial-style-two text-center">
         <div class="pattern-layer" style="background-image: url(assets/images/shape/pattern-17.png);"></div>
         <div class="thumb-box wow zoomIn animated">
-            <figure class="thumb thumb-1"><img src="assets/images/resource/thumb-1.png" alt=""></figure>
-            <figure class="thumb thumb-2"><img src="assets/images/resource/thumb-2.png" alt=""></figure>
-            <figure class="thumb thumb-3"><img src="assets/images/resource/thumb-3.png" alt=""></figure>
-            <figure class="thumb thumb-4"><img src="assets/images/resource/thumb-4.png" alt=""></figure>
+            <figure class="thumb thumb-1"><img src="https://i.pinimg.com/736x/1e/c9/e4/1ec9e4e821710d12f5a4f60b5ddec966.jpg" alt=""></figure>
+            <figure class="thumb thumb-2"><img src="https://cdn1.vectorstock.com/i/1000x1000/32/35/user-sign-icon-person-symbol-human-avatar-vector-12693235.jpg" alt=""></figure>
+            <figure class="thumb thumb-3"><img src="https://static.vecteezy.com/system/resources/thumbnails/001/921/774/small/beautiful-woman-red-hair-in-frame-circular-avatar-character-free-vector.jpg" alt=""></figure>
+            <figure class="thumb thumb-4"><img src="https://static.vecteezy.com/system/resources/thumbnails/001/993/889/small/beautiful-latin-woman-avatar-character-icon-free-vector.jpg" alt=""></figure>
         </div>
         <div class="auto-container">
             <div class="upper-box">
@@ -408,7 +408,7 @@
                     <div class="testimonial-carousel-2 owl-carousel owl-theme owl-nav-none">
                         <div class="testimonial-content">
                             <div class="inner-box">
-                                <figure class="image-box"><img src="assets/images/resource/testimonial-1.png" alt="">
+                                <figure class="image-box"><img src="https://static.vecteezy.com/system/resources/thumbnails/002/002/403/small/man-with-beard-avatar-character-isolated-icon-free-vector.jpg" alt="">
                                 </figure>
                                 <p>Switching to Lium Go for my delivery fleet was a game-changer! Their
                                     electric vehicles are reliable and their service is top-notch.
@@ -421,7 +421,7 @@
                         </div>
                         <div class="testimonial-content">
                             <div class="inner-box">
-                                <figure class="image-box"><img src="assets/images/resource/testimonial-1.png" alt="">
+                                <figure class="image-box"><img src="https://static.vecteezy.com/system/resources/thumbnails/002/002/403/small/man-with-beard-avatar-character-isolated-icon-free-vector.jpg" alt="">
                                 </figure>
                                 <p>Impressed by Lium Go’s commitment to sustainability. Their electric
                                     vehicles not only cut emissions but also boost our brand's eco-friendly
@@ -434,7 +434,7 @@
                         </div>
                         <div class="testimonial-content">
                             <div class="inner-box">
-                                <figure class="image-box"><img src="assets/images/resource/testimonial-1.png" alt="">
+                                <figure class="image-box"><img src="https://static.vecteezy.com/system/resources/thumbnails/002/002/403/small/man-with-beard-avatar-character-isolated-icon-free-vector.jpg" alt="">
                                 </figure>
                                 <p>Kudos to the team for revolutionizing last-mile deliveries. Their EVs are not only
                                     reliable but also contribute to a cleaner environment. Proud to be associated with
@@ -447,7 +447,7 @@
                         </div>
                         <div class="testimonial-content">
                             <div class="inner-box">
-                                <figure class="image-box"><img src="assets/images/resource/testimonial-1.png" alt="">
+                                <figure class="image-box"><img src="https://static.vecteezy.com/system/resources/thumbnails/002/002/403/small/man-with-beard-avatar-character-isolated-icon-free-vector.jpg" alt="">
                                 </figure>
                                 <p>Lium Go’s electric fleet transformed our last-mile delivery efficiency.
                                     I'm pleased with their vehicles' performance and the cost savings they
